# justjoinit-bot

./: .gitignore  README.md  app.py  app.qml  justjoinit_bot.py  pyproject.toml
